--- a/services/simplemap.html
+++ b/services/simplemap.html
@@ -26,8 +26,8 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: -34.397, lng: 150.644 },
-          zoom: 12,
+          center: { lat: 42.54243306533534, lng: -80.1516520530619 },
+          zoom: 10,
         });
       }
     </script>
