--- a/services/simplemap.html
+++ b/services/simplemap.html
@@ -4,7 +4,7 @@
                then modify the lat and lng and zoom to point to a place you know  -->
 <html>
   <head>
-    <title>Simple Map</title>
+    <title>Josh's Simple Map</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <style>
       /* Always set the map height explicitly to define the size of the div
@@ -27,7 +27,7 @@
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
           center: { lat: 42.54243306533534, lng: -80.1516520530619 },
-          zoom: 10,
+          zoom: 14,
         });
       }
     </script>
