--- a/story/storymapclustering.html
+++ b/story/storymapclustering.html
@@ -10,8 +10,7 @@
 <script src="storymapclustering.js"></script>
 
 <style> 
-/* Always set the map height explicitly to define the size of the div
-* element that contains the map. */
+    /* Always set the map height explicitly to define the size of the div element that contains the map. */
     #map {
     height: 100%;
     }
@@ -28,5 +27,6 @@
 
 <body>
     <div id="map"></div>
+    <h1>The Places I've Visited (V) & The Places I'm Going (G)</h1>
 </body>
 </html>
