--- a/story/storymapclustering.html
+++ b/story/storymapclustering.html
@@ -10,23 +10,24 @@
 <script src="storymapclustering.js"></script>
 
 <style> 
-    /* Always set the map height explicitly to define the size of the div element that contains the map. */
-    #map {
-    height: 100%;
-    }
+/* Always set the map height explicitly to define the size of the div element that contains the map. */
+#map {
+height: 100%;
+}
 
-    /* Optional: Makes the sample page fill the window. */
-    html,
-    body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    }
+/* Optional: Makes the sample page fill the window. */
+html,
+body {
+height: 100%;
+margin: 0;
+padding: 0;
+}
 </style>
 </head>
 
 <body>
-    <div id="map"></div>
-    <h1>The Places I've Visited (V) & The Places I'm Going (G)</h1>
+<div id="map"></div>
+<div class="hero-text"></div>
+<h1>The Places I've Visited (V) & The Places I'm Going (G)</h1>
 </body>
 </html>
