--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script>
       require(["esri/config", "esri/Map", "esri/views/MapView"], function(esriConfig, Map, MapView) {
 
-        esriConfig.apiKey = "YOUR_API_KEY";
+        esriConfig.apiKey = "AAPK761a4487d43f4d6cb4c63ece90d63928vcDdYgX3W-8T_GSpOyRyxD9Aey1MY59jxD0ZrjyTFyGK1M5tmcGHtC_ZRYYmFmUV";
 
         const map = new Map({
           basemap: "arcgis-topographic" // Basemap layer service
