--- a/tutorial2.html
+++ b/tutorial2.html
@@ -26,7 +26,7 @@
 
     ], function(esriConfig,Map, MapView, Graphic, GraphicsLayer) {
 
-  esriConfig.apiKey = "YOUR_API_KEY";
+  esriConfig.apiKey = "AAPK761a4487d43f4d6cb4c63ece90d63928vcDdYgX3W-8T_GSpOyRyxD9Aey1MY59jxD0ZrjyTFyGK1M5tmcGHtC_ZRYYmFmUV";
 
   const map = new Map({
     basemap: "arcgis-topographic" //Basemap layer service
